jenkins/jenkins-deploy-k8/base/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-access-log: "true"
    nginx.org/server-snippet: "proxy_ssl_verify off;"
spec:
#  ingressClassName: nginx
#  tls:
#    - hosts:
#      - JENKINS_FQDN 
#      secretName: io-secret
  rules:
  - host: JENKINS_FQDN
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
